--- a/template.env
+++ b/template.env
@@ -1,3 +1,3 @@
-BOT_TOKEN="token"
-KAI_ENDPOINT=https://koboldai-koboldcpp-tiefighter.hf.space
-ADMIN_NAME=concedo
+BOT_TOKEN="YOUR_BOT_TOKEN"
+KAI_ENDPOINT=http://YOUR_KOBOLD_ENDPOINT:5001
+ADMIN_NAME=YOUR_DISCORD_NAME
